--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,13 +68,21 @@ body {
 
 .navbar {
   color: white;
-  font-size: 21px;
+  font-size: 25px;
   background-color: rgba(180,0,0,.75);
 }
 
 .navbar a {
   color: white;
   text-align: center;
+}
+
+.navbar-nav {
+  margin: 0;
+}
+
+.nav > li > a {
+    padding: 15px 15px;
 }
 
 .hq .navbar {
@@ -85,14 +93,50 @@ body {
 
 .marketing .block {
   background-color: rgba(255,255,255,.75);
-  padding: 15px;
+  /*padding: 15px;*/
+  padding: 5px;
   position: relative;
-  top: 80px;
+  /* top: 80px; */
+  top: 65px;
   -webkit-box-shadow: 0 0 20px black;
   box-shadow: 0 0 20px black;
+  margin-bottom: 0;
 }
 
 .marketing .row .block {
   padding-left: 0;
   padding-right: 0;
+}
+
+.icon {
+  width: 49px;
+  padding: 4px;
+}
+
+.icon-gp .btn {
+  padding: 0;
+}
+
+.btn:active, .btn.active {
+    outline: 0;
+    background-image: none;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.35);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.35);
+}
+
+.pri-gp {
+  width: 100%;
+}
+
+.pri-gp .btn {
+  width: 33%;
+  height: 40px;
+  font-size: 20px;
+}
+
+.submit {
+  width: 100%;
+  font-size: 28px;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
