--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,3 +140,11 @@ body {
   margin-top: 30px;
   margin-bottom: 10px;
 }
+
+.dash tr {
+}
+
+.dash td, .dash th {
+  text-align: center;
+  padding: 10px;
+}
