--- a/views/alert.ejs
+++ b/views/alert.ejs
@@ -24,6 +24,20 @@
     <![endif]-->
 
     <link href="css/style.css" rel="stylesheet">
+
+    <style>
+      .success-message {
+        padding: 10px;
+        position: absolute;
+        left: 5%;
+        top: 2%;
+        z-index: 9999;
+        opacity: 1;
+        width: 90%;
+        margin:0;
+        text-align: center;
+      }
+    </style>
   </head>
 
   <body id="top" class="crew">
@@ -39,14 +53,22 @@
 
     <div class="container marketing">
       <div class="row jumbotron about-us block" style="border-radius: 0">
+      
 
         <form id="contact-form" method="post" action="/alert/new" role="form">
 
           <% if (flash.success) { %>
-          <div class="alert alert-success"><%= flash.success %></div>
+          <div class="messages">
+            <div class="success-wrapper">
+              <div class="alert alert-success alert-dismissible fade show success-message" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                <%= flash.success %>
+              </div>
+            </div>
+          </div>
           <% } %>
-
-          <div class="messages"></div>
 
           <div class="controls">
   
@@ -54,28 +76,66 @@
               <div class="col-md-12">
                 <div class="form-group">
                   <label for="selectIssueType">Select Priority Level *</label>
-                  <select class="form-control" id="selectIssueType" required data-error="Priority level is required." name="priority">
-                    <option value="" disabled selected>Choose a level</option>
-                    <option>High</option>
-                    <option>Medium</option>
-                    <option>Low</option>
-                  </select>
+
+                  <div class="pull-center">
+                    <div class="btn-group pri-gp" data-toggle="buttons">
+                      <label for="high" class="btn btn-danger">
+                      <input type="radio" name="priority" id="high" value="3">High
+                      </label>
+
+                      <label for="medium" class="btn btn-info active">
+                      <input type="radio" name="priority" id="medium" checked="checked" value="2">Medium
+                      </label>
+
+                      <label for="low" class="btn btn-success">
+                      <input type="radio" name="priority" id="low" value="1">Low
+                      </label>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
+
+               
             
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
                   <label for="selectIssueType">Select Issue Type *</label>
-                  <select class="form-control" id="selectIssueType" required data-error="Issue type is required." name="issueType">
-                    <option value="" disabled selected>Choose an issue</option>
-                    <option>Intoxicated Passenger</option>
-                    <option>Baggage Problem</option>
-                    <option>Medical Emergency</option>
-                    <option>Passenger Argument</option>
-                    <option>Seats or Overbooking</option>
-                  </select>
+
+                  <div class="pull-center">
+                    <div class="btn-group icon-gp" data-toggle="buttons">
+                      <label for="baggage" class="btn btn-secondary active">
+                      <input type="radio" name="issueType" value="Baggage Problem" id="baggage" checked="checked">
+                      <span><img class="icon" src="img/baggage.png" alt="Baggage Problem"></span>
+                      </label>
+
+                      <label for="intoxicated" class="btn btn-secondary">
+                      <input type="radio" name="issueType" value="Intoxicated Passenger" id="intoxicated">
+                      <span><img class="icon" src="img/drunk.png" alt="Intoxicated Passenger"></span>
+                      </label>
+
+                      <label for="food" class="btn btn-secondary">
+                      <input type="radio" name="issueType" id="food" value="Food Problem">
+                      <span><img class="icon" src="img/food.png" alt="Food Problem"></span>
+                      </label>
+
+                      <label for="seats" class="btn btn-secondary">
+                      <input type="radio" name="issueType" id="seats" value="Seat Problem">
+                      <span><img class="icon" src="img/seat.png" alt="Seat Problem"></span>
+                      </label>
+
+                      <label for="medical" class="btn btn-secondary">
+                      <input type="radio" name="issueType" id="medical" value="Medical Emergency">
+                      <span><img class="icon" src="img/medical.png" alt="Medical Emergency"></span>
+                      </label>
+
+                      <label for="argument" class="btn btn-secondary">
+                      <input type="radio" name="issueType" id="argument" value="Passenger Argument">
+                      <span><img class="icon" src="img/argument.png" alt="Passenger Argument"></span>
+                      </label>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -93,16 +153,6 @@
             <div class="row">
               <div class="col-md-12">
                   <div class="form-group">
-                      <label for="memberID">Crew Member ID *</label>
-                      <input id="memberID" type="number" name="crewId" class="form-control" placeholder="Please enter your phone" required="required" data-error="Crew Member ID is required.">
-                      <div class="help-block with-errors"></div>
-                  </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-md-12">
-                  <div class="form-group">
                       <label for="form_message">Comments</label>
                       <textarea id="form_message" name="comments" class="form-control" placeholder="Comments on incident" rows="4"></textarea>
                       <div class="help-block with-errors"></div>
@@ -111,21 +161,12 @@
             </div>
 
             <div class="row">
-              <div class="col-md-12">
-                  <div class="form-group">
-                  <label for="example-datetime-local-input" class="col-2 col-form-label">Date</label>
-                    <div class="col-10">
-                      <input class="form-control" type="date" value="2017-06-08" id="date">
-                    </div>
-                  </div>
+              <div class="col-md-12 pull-center">
+                  <input type="submit" class="submit btn btn-success btn-send" value="Send message">
               </div>
             </div>
 
-            <div class="row">
-              <div class="col-md-12 pull-center">
-                  <input type="submit" class="btn btn-success btn-send" value="Send message">
-              </div>
-            </div>
+            
 
           </div>
 
