Updated front end look and feel

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,6 +177,7 @@ body {
   border-bottom: solid #454753 15px;
   font-size: 0.8em;
   background-color: #393A44;
+  padding: 15px 0;
 }
 
 .dash th {
