--- a/views/alert.ejs
+++ b/views/alert.ejs
@@ -7,6 +7,8 @@
 
     <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css'>
 
+     <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,17 +43,9 @@
   </head>
 
   <body id="top" class="crew">
-    <img class="bg" src="img/bg4.jpg">
+    <h2 class="logo-head" style="text-align: center; margin-bottom: 0"><img class="logo" src="img/logo.png">IA Crew Update</h2>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <ul class="nav navbar-nav">
-          <li><a href="#">IA Airlines Crisis Response</a></li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="container marketing">
+    <div class="container marketing" style="margin-top: -30px">
       <div class="row jumbotron about-us block" style="border-radius: 0">
       
 
